@startuml
'https://plantuml.com/sequence-diagram

abstract class StudyPlan {
    String name

    + {abstract} void addStudyPlan(StudyPlan studyPlan)
    + {abstract} void removeStudyPlan(StudyPlan studyPlan)
    + {abstract} String getStudyPlanTree()
    + {abstract} int getCredit()
    + {abstract} int getFee()
}

class TimeLine

class Subject {
    int credit
    int fee
}

Subject --|> StudyPlan
StudyPlan <|-- TimeLine

StudyPlan <---* "*" TimeLine : "studyPlans"

@enduml